--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,159 +2,131 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Dashboard AQI Realtime</title>
+  <title>Dashboard AQI Thời Gian Thực</title>
 
-  <!-- Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      margin: 0;
+      background: #0f172a;
+      color: #e5e7eb;
       padding: 20px;
     }
 
     h1 {
-      text-align: center;
+      color: #38bdf8;
     }
 
     .controls {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
       margin-bottom: 20px;
     }
 
-    select, button {
-      padding: 8px 12px;
-      font-size: 14px;
+    canvas {
+      background: #020617;
+      border-radius: 10px;
+      padding: 10px;
     }
 
-    .chart-container {
-      width: 90%;
-      max-width: 900px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
+    button {
+      padding: 8px 14px;
+      background: #38bdf8;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
     }
 
-    .note {
-      text-align: center;
-      margin-top: 10px;
-      font-size: 13px;
-      color: #666;
+    input {
+      padding: 6px;
     }
   </style>
 </head>
-
 <body>
 
-<h1>📊 AQI Realtime & History Dashboard</h1>
+<h1>📈 AQI Big Data Time-Series</h1>
 
 <div class="controls">
-  <label>
-    📅 Chọn ngày:
-    <select id="dateSelect"></select>
-  </label>
-
-  <button onclick="loadData()">🔄 Tải dữ liệu</button>
+  <label>Chọn ngày:</label>
+  <input type="date" id="datePicker" />
+  <button onclick="loadHistory()">Xem dữ liệu</button>
 </div>
 
-<div class="chart-container">
-  <canvas id="aqiChart"></canvas>
-</div>
-
-<div class="note">
-  ⏱️ Dữ liệu tự động cập nhật mỗi 5 phút
-</div>
+<canvas id="aqiChart" height="120"></canvas>
 
 <script>
-  const API_URL = "/api/GetHistory";
-  const AUTO_REFRESH_MS = 5 * 60 * 1000;
+let chart;
 
-  let chart;
+async function fetchRealtimeAndSave() {
+  await fetch(`/api/GetRealtimeData?lat=21.0152&lon=105.7999`);
+  console.log("Fetched realtime & saved");
+}
 
-  // Tạo dropdown ngày (7 ngày gần nhất)
-  function initDateDropdown() {
-    const select = document.getElementById("dateSelect");
-    select.innerHTML = "";
+async function loadHistory() {
+  const date = document.getElementById("datePicker").value;
+  let url = "/api/GetHistory";
+  if (date) url += `?date=${date}`;
 
-    for (let i = 0; i < 7; i++) {
-      const d = new Date();
-      d.setDate(d.getDate() - i);
+  const res = await fetch(url);
+  const json = await res.json();
 
-      const yyyy = d.getFullYear();
-      const mm = String(d.getMonth() + 1).padStart(2, "0");
-      const dd = String(d.getDate()).padStart(2, "0");
-
-      const dateStr = `${yyyy}-${mm}-${dd}`;
-
-      const option = document.createElement("option");
-      option.value = dateStr;
-      option.text = dateStr;
-
-      select.appendChild(option);
-    }
+  if (!json.data || json.data.length === 0) {
+    alert("Chưa có dữ liệu cho ngày này");
+    return;
   }
 
-  async function loadData() {
-    const date = document.getElementById("dateSelect").value;
-    let url = API_URL;
+  const labels = json.data.map(d => d.time.substring(11, 19));
+  const aqi = json.data.map(d => d.aqi);
+  const pm25 = json.data.map(d => d.pm25);
+  const temp = json.data.map(d => d.temp);
 
-    if (date) {
-      url += `?date=${date}`;
-    }
+  renderChart(labels, aqi, pm25, temp);
+}
 
-    const res = await fetch(url);
-    const json = await res.json();
+function renderChart(labels, aqi, pm25, temp) {
+  if (chart) chart.destroy();
 
-    renderChart(json.data || []);
-  }
-
-  function renderChart(data) {
-    const labels = data.map(d => d.time);
-    const values = data.map(d => d.aqi);
-
-    if (chart) {
-      chart.destroy();
-    }
-
-    const ctx = document.getElementById("aqiChart");
-
-    chart = new Chart(ctx, {
-      type: "line",
-      data: {
-        labels,
-        datasets: [{
+  chart = new Chart(document.getElementById("aqiChart"), {
+    type: "line",
+    data: {
+      labels,
+      datasets: [
+        {
           label: "AQI",
-          data: values,
-          borderColor: "rgb(75, 192, 192)",
-          tension: 0.3,
-          fill: false
-        }]
-      },
-      options: {
-        responsive: true,
-        plugins: {
-          legend: { display: true }
+          data: aqi,
+          borderColor: "#ef4444",
+          tension: 0.3
         },
-        scales: {
-          y: {
-            beginAtZero: true
-          }
+        {
+          label: "PM2.5",
+          data: pm25,
+          borderColor: "#facc15",
+          tension: 0.3
+        },
+        {
+          label: "Nhiệt độ (°C)",
+          data: temp,
+          borderColor: "#22c55e",
+          tension: 0.3
         }
+      ]
+    },
+    options: {
+      responsive: true,
+      plugins: {
+        legend: { labels: { color: "#e5e7eb" } }
+      },
+      scales: {
+        x: { ticks: { color: "#e5e7eb" } },
+        y: { ticks: { color: "#e5e7eb" } }
       }
-    });
-  }
+    }
+  });
+}
 
-  // Auto refresh
-  setInterval(loadData, AUTO_REFRESH_MS);
-
-  // Init
-  initDateDropdown();
-  loadData();
+// 🔁 AUTO FETCH MỖI 5 PHÚT
+fetchRealtimeAndSave();
+setInterval(fetchRealtimeAndSave, 5 * 60 * 1000);
 </script>
 
 </body>
